[gd_scene load_steps=2 format=3 uid="uid://blhhkmswuluhv"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_epqf1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_epqf1")

[node name="QuitMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -48.0
offset_right = 61.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitLabel" type="Label" parent="QuitMenu"]
layout_mode = 2
text = "QuitLabel"

[node name="QuitYesButton" type="Button" parent="QuitMenu"]
layout_mode = 2
text = "QuitYesButton"

[node name="QuitNoButton" type="Button" parent="QuitMenu"]
layout_mode = 2
text = "QuitNoButton"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_right = 8.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NEWGAME"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="QuitMenu/QuitYesButton" to="." method="_on_quit_yes_button_pressed"]
[connection signal="pressed" from="QuitMenu/QuitNoButton" to="." method="_on_quit_no_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
